<?xml version="1.0" encoding="utf-8"?>

<!DOCTYPE resources [<!ENTITY appname "Video Splitter">]>

<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="open_video">Tap anywhere to open a new video</string>
    <string name="open">Open</string>
    <string name="why_permission_files">&appname; requires storage access to open and save your videos.</string>
    <string name="permission_deny_title">Could not load video</string>
    <string name="permission_deny_message">&appname; doesn\'t work without access to your videos. Turn it on in settings.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="loading_the_video">Loading the video</string>
    <string name="more">More</string>
    <string name="split">Split</string>
    <string name="thirty_seconds_splits_title">30 seconds splits</string>
    <string name="thirty_seconds_splits_subtitle">Make 30 seconds slices of your video, ideal for WhatsApp status.</string>
    <string name="split_button_title">Split Now</string>
    <string name="split_in_progress">Split in Progress</string>
    <string name="check_progress">Check Progress</string>
    <string name="splits_done">Splits done</string>
    <string name="start_over">Start Over with same video</string>
    <string name="new_project">New Project</string>
    <string name="feedback_data">mailto:videosplitterapp@gmail.com?subject=Feedback on &appname;</string>
    <string name="quality_setting_summary">%1$s\n\nHigher the quality, larger the output file size and can take longer time process</string>

    <string name="video_quality_value_original">copy</string>
    <string name="video_quality_value_very_low">libx264 -profile:v baseline -level 3.0 -pix_fmt yuv420p -preset faster</string>
    <string name="video_quality_value_low">libx264 -profile:v baseline -level 3.0 -pix_fmt yuv420p -preset fast</string>
    <string name="video_quality_value_medium">libx264 -profile:v baseline -level 3.0 -pix_fmt yuv420p -preset medium</string>
    <string name="video_quality_value_high">libx264 -profile:v baseline -level 3.0 -pix_fmt yuv420p -preset slow</string>
    <string name="video_quality_value_very_high">libx264 -profile:v baseline -level 3.0 -pix_fmt yuv420p -preset veryslow</string>

    <string name="audio_quality_value_original">copy</string>
    <string name="audio_quality_value_very_low">aac -qscale:a 9</string>
    <string name="audio_quality_value_low">aac -qscale:a 8</string>
    <string name="audio_quality_value_medium">aac -qscale:a 6</string>
    <string name="audio_quality_value_high">aac -qscale:a 1</string>
    <string name="audio_quality_value_very_high">aac -qscale:a 0</string>

    <string name="key_dark_theme">key_dark_theme</string>
    <string name="key_video_quality">key_video_quality</string>
    <string name="key_audio_quality">key_audio_quality</string>

    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <string name="there_s_nothing_here">There\'s nothing here.</string>
    <string name="generic_error">Error: Something went wrong</string>

    <string name="binding_collection_adapter">BindingCollectionAdapter</string>
    <string name="exo_player">ExoPlayer</string>
    <string name="glide">Glide</string>
    <string name="material_components_for_android">Material Components for Android</string>
    <string name="material_icons">Material icons</string>
    <string name="mobile_ffmpeg">MobileFFmpeg</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of service</string>

    <string name="app_name_license" translatable="false">&appname; License [GPLv3]</string>
    <string name="app_source" translatable="false">&appname; Source [GPLv3]</string>
    <string name="custom_time_splits">Custom time splits</string>
    <string name="make_custom_time_slices_of_your_video_choose_the_time_below">Make custom time slices of your video, choose the time below.</string>
    <string name="manual_splits">Manual splits</string>
    <string name="take_full_control_seek_to_any_position_in_the_video_and_click_break_to_split_at_that_position">Take full control! Seek to any position in the video and click Break to split at that position</string>
    <string name="undo">Undo</string>
    <string name="undo_last_break">Undo last break</string>
    <string name="undo_last_delete">Undo last delete</string>
    <string name="break_at_marker">Break At Marker</string>
    <string name="library_location">Library Location</string>
    <string name="library">Library</string>
    <string name="please_wait">Please wait</string>
    <string name="migrating_videos">Migrating videos to new library location...</string>
    <string name="unable_to_process_file">Unable to process file</string>
</resources>