<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="io.github.videosplitterapp.screens.manualsplit.ManualSplitModel" />

        <variable
            name="itemBinding"
            type="me.tatarka.bindingcollectionadapter2.ItemBinding&lt;ManualSplitModel&gt;" />

        <variable
            name="manualSplitViewModel"
            type="io.github.videosplitterapp.screens.manualsplit.ManualSplitViewModel" />

        <variable
            name="viewInteraction"
            type="io.github.videosplitterapp.screens.manualsplit.ManualSplitViewInteraction" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/custom_split_fragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/manual_splits"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin_half"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/take_full_control_seek_to_any_position_in_the_video_and_click_break_to_split_at_that_position"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:background="@android:color/black"
            android:paddingTop="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@id/splits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/splits"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/default_margin_double"
            android:clipToPadding="false"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="@dimen/default_margin"
            app:itemBinding="@{itemBinding}"
            app:items="@{manualSplitViewModel.items}"
            app:layout_constraintBottom_toTopOf="@id/undoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_view_manual_split"
            tools:orientation="horizontal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/undoButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:enabled="@{manualSplitViewModel.undoAvailable}"
            android:onClick="@{() -> viewInteraction.undo()}"
            app:layout_constraintBottom_toBottomOf="@id/breakButton"
            app:layout_constraintEnd_toStartOf="@+id/breakButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:undoOperation="@{manualSplitViewModel.undoOperation}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/breakButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:onClick="@{() -> viewInteraction.breakAtMarker()}"
            android:text="@string/break_at_marker"
            app:layout_constraintBottom_toTopOf="@id/splitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/undoButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/splitButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:onClick="@{() -> viewInteraction.splitVideo()}"
            android:text="@string/split_button_title"
            app:icon="@drawable/ic_content_cut"
            app:iconGravity="textStart"
            app:iconSize="@dimen/button_icon_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>